# ToxicTerminator

./: .gitignore  Makefile  README.md  environment.yml  get-data.sh  main.cpp  requirements.txt  trie.cpp
.github/workflows/: python-package-conda.yml
Toxic_Terminators/: solution.html
Toxic_Terminators/css/: solution.css
backend/: CMakeLists.txt  Makefile  hashmap.cpp  hashmap_pybind.cpp  python_backend.py  trie.cpp  trie_cpy.cpp  trie_pybind.cpp
backend/chats/: Makefile  get-chats.py  process.py
website/: flask_app.py
website/templates/: about.html  game.html  solution.html
